Git_WGBH_QC/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <description>These are the segments that define the giving level from a donor</description>
        <label>Giving Segment</label>
        <picklist>
            <controllingField>Financial_segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Tier Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Hill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTML_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>House_File_Name__c</fullName>
        <description>This is the name of the house file which is contained within this campaign.</description>
        <inlineHelpText>When the check box for the House File is checked please fill out the house file name that is associated to this campaign.</inlineHelpText>
        <label>House File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>House_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to identify if this campaign contains a house file</description>
        <inlineHelpText>When the box is checked on the house file please fill out the name of the file that is contained within this campaign for tracking purposes.</inlineHelpText>
        <label>House File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Calls__c</fullName>
        <label>Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction &amp; Bldg Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spa, Beauty &amp; Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre/Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine/Spirits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <description>Field related to the industry, this is a sub category of the Industries for campaign/Projects.</description>
        <inlineHelpText>Choose a sub industry after you chose the main Industry if applicable.</inlineHelpText>
        <label>Industry Sub Category</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café/Eaterie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Unions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary/Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink/Water/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/Computers/Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>High Level Industry - it will also in most cases have an industry sub category</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction &amp; Bldg Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spa, Beauty &amp; Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiative_Date__c</fullName>
        <inlineHelpText>Date that the project will come.</inlineHelpText>
        <label>Initiative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>GBHAQMM110115</description>
        <inlineHelpText>Job # allows for invoices from a vendor, the job number should be the same for the entire run and should have the following format; STATION, GIVING SEGMENT, CHANNEL, YYMMDD of campaign creation.</inlineHelpText>
        <label>Job #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_File_Code__c</fullName>
        <label>List File Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_File_Name__c</fullName>
        <description>If the check box is checked the list file name should be populated</description>
        <inlineHelpText>If this campaign contains list file names please enter the name of the file for tracking purposes.</inlineHelpText>
        <label>List File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box as a place holder for this field we can edit the type if you wish to track the name of the list file, there is also a new field for the list file tracking name/number.</description>
        <inlineHelpText>This checkbox indicates whether this name is from a list file, the List File Name is where you enter the name of the rental file.</inlineHelpText>
        <label>List File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Latitude__c</fullName>
        <label>Location Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Longitude__c</fullName>
        <label>Location Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <label>Logo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Discount_Logo__c</fullName>
        <label>Member Benefit Discount Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Logo__c</fullName>
        <label>Member Benefit Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Model_score__c</fullName>
        <label>Model score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NCOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>National Change of Address</description>
        <inlineHelpText>If this box is check it confirms that the members within this campaign having been run up against the National Change of Address file.</inlineHelpText>
        <label>NCOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Goal__c</fullName>
        <label>Net Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes for the users regarding the event, not for publication on the WGBH Event site</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Message__c</fullName>
        <inlineHelpText>Rich text with characters to describe the offer sent to the donor</inlineHelpText>
        <label>Offer Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outbound_Vendor_File__c</fullName>
        <description>This field will contains outbound vendor details.</description>
        <label>Outbound Vendor File</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MailAmerica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McPherson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Field Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM dialer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Gift__c</fullName>
        <label>Override Gift</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parents_Program_Count_Total__c</fullName>
        <label>Parents Program Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prime_Time_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to indicate if the on air campaign/program break will air during prime time, this field is related to the individual breaks not the overall sub programs.</inlineHelpText>
        <label>Prime Time Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Program__c</fullName>
        <inlineHelpText>Product/Program is the larger program of the campaign.  Membership;Survey;Stewardship;Capital;Auction;Cultivation</inlineHelpText>
        <label>Product/Program</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramBreak_EndDateTime__c</fullName>
        <label>ProgramBreak_EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProgramBreak_StartDateTime__c</fullName>
        <label>ProgramBreak_StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Break_Name__c</fullName>
        <label>Program Break Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <label>Program Count</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_by_Segment__c</fullName>
        <inlineHelpText>Count per segment receiving the marketing</inlineHelpText>
        <label>Quantity by Segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI Marketing R.O.I./Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Mechanism__c</fullName>
        <description>How we expect the response to come in.</description>
        <inlineHelpText>How we expect the response to come in.</inlineHelpText>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Call Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesale Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Goal__c</fullName>
        <label>Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment_Age_Range__c</fullName>
        <inlineHelpText>Each sub campaign may be geared toward a certain segmented age range, please choose the appropriate range.</inlineHelpText>
        <label>Segment Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Gender__c</fullName>
        <inlineHelpText>Sub campaign programs may choose to segment based on gender, please choose the gender when creating the program if applicable.</inlineHelpText>
        <label>Segment Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Notes__c</fullName>
        <inlineHelpText>Segment Notes test</inlineHelpText>
        <label>Segment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_for_the_Project__c</fullName>
        <description>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.</description>
        <inlineHelpText>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.   008 and 009 are used for Telemarketing, 999 is for Web.</inlineHelpText>
        <label>Segment for the Project</label>
        <picklist>
            <picklistValues>
                <fullName>001 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>007 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999 Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Breaks__c</fullName>
        <inlineHelpText>Please identify how many breaks will be associated to this sub program in total.</inlineHelpText>
        <label>Show Breaks</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type__c</fullName>
        <label>Solicitation Type</label>
        <picklist>
            <controllingField>Giving_Segment__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code_Character_4__c</fullName>
        <formula>if(ISPICKVAL( Product_Program__c, &quot;Membership&quot;),

 Case(Campaign_Name__c,
&quot;ANNUAL&quot;,&quot;A&quot;,
&quot;EVENTS&quot;,&quot;E&quot;,
&quot;MATCHING GIFT&quot;,&quot;G&quot;,
&quot;IN KIND&quot;,&quot;K&quot;,
&quot;SALES&quot;,&quot;S&quot;, &quot;&quot;), 


 Case(Product_Program__c,&quot;MAJOR GIFT&quot;,&quot;M&quot;,
&quot;AUCTION&quot;,&quot;D&quot;,
&quot;CULTIVATION&quot;,&quot;C&quot;,
&quot;STEWARDSHIP&quot;,&quot;C&quot;,
&quot;SURVEY&quot;,&quot;P&quot;, &quot;&quot;))</formula>
        <label>Source Code Character 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_First12Char__c</fullName>
        <externalId>true</externalId>
        <label>Source Code First12Char</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>